--- a/spa-app/src/App.css
+++ b/spa-app/src/App.css
@@ -1,8 +1,11 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .logo {
@@ -40,11 +43,11 @@
 .read-the-docs {
   color: #888;
 }
-/* В конец файла spa-app/src/App.css */
 
 .content-area {
+    width: 100%;
     min-height: 100vh;
-    background-color: #242424; /* Принудительный фон приложения */
+    background-color: #242424;
     position: relative;
     z-index: 1;
 }
